Displaying images in combination with transform: translateY(0) and mix-blend-mode: multiply
Categories
(Core :: Web Painting, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox67 | --- | wontfix |
| firefox67.0.1 | --- | wontfix |
| firefox68 | --- | fixed |
| firefox69 | --- | fixed |
People
(Reporter: paquan, Assigned: mikokm)
References
(Regression)
Details
(Keywords: regression)
Attachments
(4 files, 1 obsolete file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.14; rv:67.0) Gecko/20100101 Firefox/67.0
Steps to reproduce:
I placed an image with transform: translateY(0) and over the image I placed a div with text and a before-element with a background-color and mix-blend-mode: multiply.
https://codepen.io/paquan/pen/PvQJbX
Actual results:
The image disappears except of that part underneath the div with the mix-blend-mode.
Expected results:
The image should be fully displayed like in Firefox 66 or in Chrome.
| Reporter | ||
Updated•6 years ago
|
Comment 1•6 years ago
|
||
I can reproduce the iss on Windows10 if HWA is disabled.
Regression window:
8a15f91d48c7541337d16c5e3f6f4551e7371e3d
Regressed by: Bug 1526941
Miko Mynttinen,
Your patch seems to cause the regression. Can you please look into this?
| Assignee | ||
Updated•6 years ago
|
Comment 2•6 years ago
|
||
(In reply to Alice0775 White from comment #1)
Regression window:
8a15f91d48c7541337d16c5e3f6f4551e7371e3d
Oops, sorry, paste miss
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=8a15f91d48c7541337d16c5e3f6f4551e7371e3d&tochange=02fe822afa8c6252970f779dcbfd4a7b57fefd13
Updated•6 years ago
|
| Reporter | ||
Comment 3•6 years ago
|
||
I'm new to this and am pretty sure I did something wrong. Anyways, thank you @Alice0775 White for helping me out and thanks for checking this out.
| Assignee | ||
Comment 4•6 years ago
|
||
(In reply to Andy Bestvater (:paquan) from comment #3)
I'm new to this and am pretty sure I did something wrong. Anyways, thank you @Alice0775 White for helping me out and thanks for checking this out.
Thank you for the report Andy. Having a testcase is always very appreciated. I have managed to reproduce this bug and I am working on getting it fixed. :)
| Assignee | ||
Comment 5•6 years ago
|
||
| Assignee | ||
Comment 6•6 years ago
|
||
| Assignee | ||
Comment 7•6 years ago
|
||
Attached a further simplified testcase and a DL dump.
The testcase seems to work with WR enabled, so this looks like a FLB regression due to changed bounds calculation. Since the image sometimes loads, the bug might also be related to image decoding.
| Assignee | ||
Comment 8•6 years ago
|
||
Simplified testcase without image.
| Assignee | ||
Comment 9•6 years ago
|
||
Comment 10•6 years ago
|
||
Comment 11•6 years ago
|
||
| bugherder | ||
Comment 12•6 years ago
|
||
Is this something we should consider backporting to Beta ahead of the ESR or can it ride the trains to release?
| Assignee | ||
Comment 13•6 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #12)
Is this something we should consider backporting to Beta ahead of the ESR or can it ride the trains to release?
I would like to get this uplifted.
| Assignee | ||
Comment 14•6 years ago
|
||
Comment on attachment 9069809 [details]
Bug 1553828 - Compute intermediate bounds for transform items that do not extend 3D context r=mattwoodrow
Beta/Release Uplift Approval Request
- User impact if declined: Blend modes inside 3D transforms might not work correctly.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The patch is small and restores the previous behavior of 3D transform bounds calculations, which is well tested. There is also an automated testcase.
- String changes made/needed:
Comment 15•6 years ago
|
||
Comment on attachment 9069809 [details]
Bug 1553828 - Compute intermediate bounds for transform items that do not extend 3D context r=mattwoodrow
painting fix for 68.0b9
Comment 16•6 years ago
|
||
I tried to uplift this but I got an conflict while merging on layout/painting/nsDisplayList.cpp
Comment 17•6 years ago
|
||
| bugherder uplift | ||
Description
•