Bug 1553828 - Compute intermediate bounds for transform items that do not extend 3D context. r=mattwoodrow, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D33724